2005-11-27  Simon Goodall  <libwfut@simongoodall.co.uk>

	* Initial ChangeLog entry.